<resources>
    <string name="app_name">Shake Send Save</string>
    <string name="email">Email</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_no">Mobile No</string>
    <string name="save">Save</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="others">Others</string>
    <string name="male">Male</string>
    <string name="gender">Gender:</string>
    <string name="name">Name</string>
    <string name="user_name">User Name:</string>
    <string name="open">Open Navigation Drawer</string>
    <string name="close">Close Navigation Drawer</string>
    <string name="todo">TODO</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>